# running-buddy

./: .env.example  .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/api/routes/: auth.py  chat.py
src/app/endpoints/: ai.py  auth.py
src/app/models/: chat.py
src/app/services/: ai_agent.py  gmaps.py  strava.py
src/app/services/chatbot/: graph.py  human_confirmation.py  prompts.py  tools.py  utils.py
src/app/services/googlemaps/: client.py
src/app/services/strava/: client.py
src/app/static/: chat-ui.html  index.html  old_scripts.js  scripts.js  styles.css
src/app/utils/: logger.py  maps.py
